--- a/markup/components/example/example.html
+++ b/markup/components/example/example.html
@@ -1,5 +1,9 @@
+<div class="promo-wrap">
 <div class="promo">
-    <div id="promo" class="promo__inner">promo</div>
+    <div id="promo" class="promo__inner">
+        <img src="https://cs5.pikabu.ru/images/big_size_comm/2014-11_3/14160742494149.jpg" width="600" alt="" />
+    </div>
+</div>
 </div>
 <div class="elem"></div>
 
