--- a/markup/components/example/example.html
+++ b/markup/components/example/example.html
@@ -1,9 +1,11 @@
 <div class="promo-wrap">
-<div class="promo">
-    <div id="promo" class="promo__inner">
+    <div class="promo scale">
+    </div>
+    <div id="promo" class="promo__inner scale">
         <img src="https://cs5.pikabu.ru/images/big_size_comm/2014-11_3/14160742494149.jpg" width="600" alt="" />
     </div>
 </div>
+<div class="elem">
+    <h2 class="elem__title">Next block</h2>
 </div>
-<div class="elem"></div>
 
